src/assets/styles.css
* {
    font-family: 'Roboto', sans-serif;
}

.container {
    width: 95%;
    min-width: 65%;
    margin: 20px auto;
}

h3 {
    color: #4F4F4F;
}

table {
    border: 1px solid #C0C0C0;
    border-collapse: collapse;
}

td,
th {
    border: 1px solid #C0C0C0 !important;
    padding: 16px 30px !important;
    position: relative;
    color: #4F4F4F;
    height: 60px !important;
}

th {
    border-bottom: 0px !important;
    letter-spacing: 1px;
}

input {
    text-transform: capitalize;
}

.active {
    background-color: #FE5F55 !important;
    color: white;
    position: absolute;
    right: 0;
    left: 0;
    top: 0;
    padding: 4px 7px;
    bottom: 0;
    border-left: yellow 3px solid;
    text-transform: capitalize;
}

.cell {
    transition: all 0.1s ease-in-out;
}

.cell:hover {
    background-color: rgba(255, 59, 61, 0.1);
    cursor: pointer;
}
/*.sticky {
    left: -110px;
    border: 1px solid #C0C0C0 !important;
    border-top: 1px solid #C0C0C0 !important;
    position: absolute;
    top: auto;
    width: 130px;
    background-color: white;
    z-index: 100;
}*/

.scheduler {
    position: relative;
}

.hideNumber {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 74px;
}

hr {
    margin-top: 2px !important;
    margin-bottom: 4px !important;
}

